tcp-based-random-app/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-passthrough
  namespace: istio-system
spec:
  hosts:
  - "tcphello.example.com"
  gateways:
  - tcp-passthrough
  tcp:
  - match:
    - port: 1433
    route:
    - destination:
        host: tcp-random-app.tcp-random-app.svc.cluster.local
        port:
          number: 17777
---
